--- a/math/notes/env-notes.tex
+++ b/math/notes/env-notes.tex
@@ -177,8 +177,10 @@
 \def \ceil[#arguments]{\delim[#arguments][⌈][⌉]}
 
 % Logic
-\def \synentl[#structure][#satisfaction]#arguments{⊨_{#structure} #arguments \ [#satisfaction]}
-\def \nsynentl[#structure][#satisfaction]#arguments{⊭_{#structure} #arguments \ [#satisfaction]}
+\def \symentl[#structure][#satisfaction]#arguments{⊨_{#structure} #arguments \ [#satisfaction]}
+\def \nsymentl[#structure][#satisfaction]#arguments{⊭_{#structure} #arguments \ [#satisfaction]}
+\def \synentl[#structure][#satisfaction]#arguments{⊢_{#structure} #arguments \ [#satisfaction]}
+\def \nsynentl[#structure][#satisfaction]#arguments{⊬_{#structure} #arguments \ [#satisfaction]}
 % \def \symentl[#arguments][#structure][#satisfaction]{⊢_{#structure} #arguments \ [#satisfaction]}
 
 % Algebra
