--- a/math/notes/prd-research/prd-research.tex
+++ b/math/notes/prd-research/prd-research.tex
@@ -22,11 +22,11 @@
 \setvariables [document] [fontsize=10pt]
 
 % Document specific information
-\setvariables [document] [title={Analysis}]
-\setvariables [document] [subtitle={With an emphasis on probability theory}]
+\setvariables [document] [title={Anticipating stochastic integrals and its large deviations}]
+% \setvariables [document] [subtitle={}]
 \setvariables [document] [author={Sudip Sinha}]
 \setvariables [document] [date={\date}]
-\setvariables [document] [keyword={mathematics, solutions, notes, probability theory, stochastic analysis, anticipating integrals, large deviations theory}]
+\setvariables [document] [keyword={mathematics, notes, probability theory, stochastic analysis, anticipating integrals, large deviations theory}]
 
 
 
